--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"slim/slim": "2.*",
 		"twig/twig": "~1.5",
 		"raveren/kint": "v0.9",
-		"zeuxisoo/slim-whoops": "0.3.0"
+		"zeuxisoo/slim-whoops": "0.3.0",
+		"franzl/whoops-middleware": "^0.4.1"
 	}
 }
